5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1575_1332.log
== TEST (2019-03-12 20:44:05) 
-- CODE:
aresta = print(3/2*(3)**0,5*5**2)
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:44:42) 
-- CODE:
aresta = 
area = 3/2(3)**0,5*5**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta = 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:45:28) 
-- CODE:
aresta = print(5)
area = print(3/2(3)**0,5*5**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = print(3/2(3)**0,5*5**2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:45:32) 
-- CODE:
aresta = print(5)
area = print(3/2(3)**0,5*5**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.166425
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/1332/main.py", line 2, in <module>
    area = print(3/2(3)**0,5*5**2)
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:54:41) 
-- CODE:
aresta = 5**2
area = 1.5*3**1/2*a**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 1.5*3**1/2*a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:56:10) 
-- CODE:
aresta = 5**2
area = (1.5)*(3)**1/2
 
print(round(area, 4))
-- OUTPUT:
2.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:56:14) 
-- CODE:
aresta = 5**2
area = (1.5)*(3)**1/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.125458
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:56:54) 
-- CODE:
aresta = 5**2
area = (1.5)*(3)**0.5
 
print(round(area, 4))
-- OUTPUT:
2.5981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:56:56) 
-- CODE:
aresta = 5**2
area = (1.5)*(3)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.167905
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.5981
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:57:29) 
-- CODE:
aresta = 5**2
area = ((1.5)*(3)**0.5)
 
print(round(area, 4))
-- OUTPUT:
2.5981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:57:32) 
-- CODE:
aresta = 5**2
area = ((1.5)*(3)**0.5)
 
print(round(area, 4))
-- EXECUTION TIME:
0.142867
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.5981
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:57:45) 
-- CODE:
aresta = 5**2
area = ((3/2)*(3)**0.5)
 
print(round(area, 4))
-- EXECUTION TIME:
0.128576
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.5981
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:58:04) 
-- CODE:
aresta = 5**2
area = ((3/2)*(3**0.5))
 
print(round(area, 4))
-- OUTPUT:
2.5981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:58:07) 
-- CODE:
aresta = 5**2
area = ((3/2)*(3**0.5))
 
print(round(area, 4))
-- EXECUTION TIME:
0.163555
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.5981
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:59:00) 
-- CODE:
aresta = 5**2
area = ((3/2)*(3**0.5)*(aresta**2))
 
print(round(area, 4))
-- OUTPUT:
1623.7976
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:59:04) 
-- CODE:
aresta = 5**2
area = ((3/2)*(3**0.5)*(aresta**2))
 
print(round(area, 4))
-- EXECUTION TIME:
0.209005
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1623.7976
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:59:27) 
-- CODE:
aresta = 5
area = ((3/2)*(3**0.5)*(aresta**2))
 
print(round(area, 4))
-- EXECUTION TIME:
0.174506
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
